--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -35,24 +35,29 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/form.html">회원가입</a></li>
+        <li><a href="/list">사용자 목록</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
 <div class="container">
-<form>
+<form action="/create" method="post">
   <div class="form-group">
     <label for="userId">ID</label>
-    <input type="text" class="form-control" id="userId" placeholder="ID">
+    <input type="text" class="form-control" id="userId" name="userId"placeholder="ID">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Name</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Name">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+  </div>
+  <div class="form-group">
+    <label for="name">Email</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="Email">
   </div>
  
   <button type="submit" class="btn btn-default">Submit</button>
